--- a/indexbis.html
+++ b/indexbis.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/stylebis.css" type="text/css">
-  <link rel="stylesheet" media="screen and (max-width: 767px)" href="css/xs.css" type="text/css">
+  <link rel="stylesheet" media="screen and (max-width: 767pxméthode )" href="css/xs.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 991px)" href="css/sm.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 992px) and (max-width: 1199px)" href="css/md.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 1200px)" href="css/lg.css" type="text/css">
@@ -19,14 +19,14 @@
     <div class="case">
 
           <div class="cartes">
-              <figure><img alt="3 trefle" src="img/03-trefle.png"></figure>
-              <figure><img alt="10 de pique" src="img/10-pique.png"></figure>
+              <figure><img alt="carte" src="img/dos-rouge.png"><img alt="3 trefle" src="img/03-trefle.png"></figure>
+              <figure><img alt="carte" src="img/dos-rouge.png"><img alt="10 de pique" src="img/10-pique.png"></figure>
           </div>
 
-          <h2 class="">Joueur 1</h2>
+          <h2>Arsenic</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -36,14 +36,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="joker" src="img/joker-noir.png"></figure>
-            <figure><img alt="9 carreau" src="img/09-carreau.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="joker" src="img/joker-noir.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="9 carreau" src="img/09-carreau.png"></figure>
           </div>
 
-          <h2 class="">Joueur 2</h2>
+          <h2>Wardmar</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -53,14 +53,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="1 trefle" src="img/01-trefle.png"></figure>
-            <figure><img alt="Valet de trèfle" src="img/V-trefle.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="1 trefle" src="img/01-trefle.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="Valet de trèfle" src="img/V-trefle.png"></figure>
           </div>
 
-          <h2 class="">Joueur 3</h2>
+          <h2>Stark</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -70,14 +70,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="dame carreau" src="img/D-carreau.png"></figure>
-            <figure><img alt="3 de coeur" src="img/03-coeur.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="dame carreau" src="img/D-carreau.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="3 de coeur" src="img/03-coeur.png"></figure>
           </div>
 
-          <h2 class="">Joueur 4</h2>
+          <h2>Wyred</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -87,14 +87,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="7 pique" src="img/07-pique.png"></figure>
-            <figure><img alt="6 de coeur" src="img/06-coeur.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="7 pique" src="img/07-pique.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="6 de coeur" src="img/06-coeur.png"></figure>
           </div>
 
-          <h2 class="">Joueur 5</h2>
+          <h2>Fitz</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -104,14 +104,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="8 carreau" src="img/08-carreau.png"></figure>
-            <figure><img alt="5 pique" src="img/05-pique.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="8 carreau" src="img/08-carreau.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="5 pique" src="img/05-pique.png"></figure>
           </div>
 
-          <h2 class="">Joueur 6</h2>
+          <h2>Keitaro</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -121,14 +121,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="valet coeur" src="img/V-coeur.png"></figure>
-            <figure><img alt="4 de trèfle" src="img/04-trefle.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="valet coeur" src="img/V-coeur.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="4 de trèfle" src="img/04-trefle.png"></figure>
           </div>
 
-          <h2 class="">Joueur 7</h2>
+          <h2>Eole</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -138,14 +138,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="roi pique" src="img/R-pique.png"></figure>
-            <figure><img alt="2 de trèfle" src="img/02-trefle.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="roi pique" src="img/R-pique.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="2 de trèfle" src="img/02-trefle.png"></figure>
           </div>
 
-          <h2 class="">Joueur 8</h2>
+          <h2>Mania</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
@@ -155,14 +155,14 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="2 de pique" src="img/02-pique.png"></figure>
-            <figure><img alt="roi coeur" src="img/R-coeur.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="2 de pique" src="img/02-pique.png"></figure>
+            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="roi coeur" src="img/R-coeur.png"></figure>
           </div>
 
-          <h2 class="">Joueur 9</h2>
+          <h2>Murphy</h2>
 
           <div class="basDeCase">
-            <a href="" class="">rejouer</a>
+            <a href="" class="bouton">rejouer</a>
             <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
           </div>
 
