--- a/indexbis.html
+++ b/indexbis.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/stylebis.css" type="text/css">
-  <link rel="stylesheet" media="screen and (max-width: 767pxméthode )" href="css/xs.css" type="text/css">
+  <link rel="stylesheet" media="screen and (max-width: 767px)" href="css/xs.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 991px)" href="css/sm.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 992px) and (max-width: 1199px)" href="css/md.css" type="text/css">
   <link rel="stylesheet" media="screen and (min-width: 1200px)" href="css/lg.css" type="text/css">
@@ -36,7 +36,7 @@
     <div class="case">
 
           <div class="cartes">
-            <figure><img alt="carte" src="img/dos-rouge.png"><img alt="joker" src="img/joker-noir.png"></figure>
+            <figure id="joker"><img alt="carte" src="img/dos-rouge.png"><img alt="joker" src="img/joker-noir.png"></figure>
             <figure><img alt="carte" src="img/dos-rouge.png"><img alt="9 carreau" src="img/09-carreau.png"></figure>
           </div>
 
