Changed class names, switched img to button for 3 dots

--- a/indexbis.html
+++ b/indexbis.html
@@ -26,8 +26,8 @@
           <h2>Arsenic</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -43,8 +43,8 @@
           <h2>Wardmar</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -60,8 +60,8 @@
           <h2>Stark</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -77,8 +77,8 @@
           <h2>Wyred</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -94,8 +94,8 @@
           <h2>Fitz</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -111,8 +111,8 @@
           <h2>Keitaro</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -128,8 +128,8 @@
           <h2>Eole</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -145,8 +145,8 @@
           <h2>Mania</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
@@ -162,8 +162,8 @@
           <h2>Murphy</h2>
 
           <div class="basDeCase">
-            <a href="" class="bouton">rejouer</a>
-            <a href="" class="miniMenu"><img src="img/3dots.svg"></a>
+            <a href="" class="rejouer">rejouer</a>
+            <a href=""><button type="button"></a>
           </div>
 
     </div>
